<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rlSearchImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_42dp"
                android:layout_alignParentTop="true"
                android:background="@color/blue">

                <ImageView
                    android:id="@+id/ivImageSurprised"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/tvImageMeme"
                    android:padding="@dimen/_2dp"
                    android:src="@drawable/surprised" />

                <TextView
                    android:id="@+id/tvImageMeme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="serif"
                    android:text="@string/image_meme"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/ivImageCool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tvImageMeme"
                    android:padding="@dimen/_2dp"
                    android:src="@drawable/cool" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rlSearchImage" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/blue"
                android:padding="@dimen/_156dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_error_outline"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_server"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explain"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_12sp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>