<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageButton
                android:id="@+id/ibChooseUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:onClick="showPopupMenu"
                android:src="@drawable/ic_baseline_file_upload" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/rlImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/btnBackImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="?selectableItemBackground"
                android:padding="@dimen/_4dp"
                android:src="@drawable/ic_baseline_arrow_back" />

            <LinearLayout
                android:id="@+id/llImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnBackImage"
                android:layout_marginTop="@dimen/_16dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity=""
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSelectImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4dp"
                        android:background="@drawable/background_button"
                        android:paddingLeft="@dimen/_8dp"
                        android:paddingRight="@dimen/_8dp"
                        android:text="@string/select_image"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sp" />

                    <Button
                        android:id="@+id/btnUploadImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4dp"
                        android:background="@drawable/background_button"
                        android:paddingLeft="@dimen/_4dp"
                        android:paddingRight="@dimen/_4dp"
                        android:text="@string/title_upload"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcImageUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llImage"
                android:layout_marginTop="@dimen/_4dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/btnBackVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="?selectableItemBackground"
                android:padding="@dimen/_4dp"
                android:src="@drawable/ic_baseline_arrow_back" />

            <LinearLayout
                android:id="@+id/llVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnBackVideo"
                android:layout_marginTop="@dimen/_16dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSelectVideo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4dp"
                        android:background="@drawable/background_button"
                        android:paddingLeft="@dimen/_8dp"
                        android:paddingRight="@dimen/_8dp"
                        android:text="@string/select_video"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sp" />

                    <Button
                        android:id="@+id/btnUploadVideo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4dp"
                        android:background="@drawable/background_button"
                        android:paddingLeft="@dimen/_4dp"
                        android:paddingRight="@dimen/_4dp"
                        android:text="@string/title_upload"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcVideoUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llVideo"
                android:layout_marginTop="@dimen/_4dp" />
        </RelativeLayout>
    </RelativeLayout>
</layout>